# ai-agent-template

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture-diagrams.md  architecture.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: markdown-message.tsx
frontend/src/components/ui/: button.tsx
frontend/src/lib/: api.ts
scripts/: check.sh
src/ai_agent_template/: __init__.py  main.py
src/ai_agent_template/agent/: __init__.py  checkpointer.py  graph.py  models.py  service.py  state.py  tools.py
src/ai_agent_template/api/: app.py  dependencies.py  errors.py  middleware.py  schemas.py  security.py
src/ai_agent_template/api/routes/: agent.py  health.py  rag.py
src/ai_agent_template/core/: logging.py  settings.py
src/ai_agent_template/observability/: __init__.py  tracing.py
src/ai_agent_template/rag/: loaders.py  schemas.py  service.py  vectorstore.py
tests/: test_agent_service.py  test_api_edge.py  test_evals_runner.py  test_health.py  test_rag_service.py
tests/evals/: golden.jsonl  runner.py
